RESOLVED FIXED11189
REGRESSION (NativeListBox): When a list box has focus, pressing command- A (select all) doesn't selected all items in list
https://bugs.webkit.org/show_bug.cgi?id=11189
Summary REGRESSION (NativeListBox): When a list box has focus, pressing command- A (s...
Chris Petersen
Reported 2006-10-06 10:15:28 PDT
* SUMMARY REGRESSION (NativeListBox): When a list box has focus, pressing command- A (select all) doesn't selected all items in list. Instead, the selection is placed out of list box onto the page. * STEPS TO REPRODUCE 1. With r16831, open "select_multiple_2.html" 2. Click in either list box so at least at one item is selected 3. Press command -A 4. Instead of all the list items becoming highlighted, a selection is created on the page * RESULTS When a select list box has focus, pressing command-A should select all items in the list (providing the select uses multiple attribute) * REGRESSION Yes, this works in stock Safari under 10.4.7.
Attachments
patch (6.73 KB, patch)
2006-12-16 13:26 PST, Adele Peterson
adele: review+
Chris Petersen
Comment 1 2006-10-06 10:16:32 PDT
This issue is also filed as <rdar://problem/4770249>
Adele Peterson
Comment 2 2006-12-16 13:26:58 PST
Created attachment 11886 [details] patch I'd rather not add more stuff to Node, but I couldn't think of a better place to put those methods. Suggestions are welcome. Thanks!
Adele Peterson
Comment 3 2006-12-16 13:44:34 PST
Comment on attachment 11886 [details] patch Maciej reviewed this
Adele Peterson
Comment 4 2006-12-16 13:45:05 PST
Committed revision 18261.
Maciej Stachowiak
Comment 5 2006-12-16 15:10:47 PST
Comment on attachment 11886 [details] patch r=me
mitz
Comment 6 2006-12-17 10:49:49 PST
*** Bug 11520 has been marked as a duplicate of this bug. ***
mitz
Comment 7 2006-12-17 10:54:09 PST
Hmm... Command-A still selects everything on the page for me, using Safari 2.0.4 with locally-built WebKit r18269.
mitz
Comment 8 2006-12-17 11:40:37 PST
(In reply to comment #7) > Hmm... Command-A still selects everything on the page for me, using Safari > 2.0.4 with locally-built WebKit r18269. > Oops, tested with the wrong build. Sorry about that. This bug is indeed fixed in TOT.
Note You need to log in before you can comment on or make changes to this bug.