WebCore/html/HTMLSelectElement.h
@@ -51,6 +51,8 @@ public:
     
     virtual bool isKeyboardFocusable(KeyboardEvent*) const;
     virtual bool isMouseFocusable() const;
+    virtual bool canSelectAll() const { return !usesMenuList(); }
+    virtual void selectAll();
 
     virtual void recalcStyle(StyleChange);
 
